Set correct container

--- a/deploy/kubernetes/hcloud-csi-dev.yml
+++ b/deploy/kubernetes/hcloud-csi-dev.yml
@@ -150,7 +150,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: hcloud-csi-driver
-          image: lkdevelopment/csi-driver:v1.2.0
+          image: hetznercloud/hcloud-csi-driver:latest
           imagePullPolicy: Always
           env:
             - name: CSI_ENDPOINT
