--- a/.github/workflows/publish_on_master.yml
+++ b/.github/workflows/publish_on_master.yml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: '1.12'
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v1
       - name: Publish latest tag to registry
         env:
             DOCKER_USER: ${{ secrets.DOCKER_USER }}
