--- a/.github/workflows/publish_on_master.yml
+++ b/.github/workflows/publish_on_master.yml
@@ -10,6 +10,7 @@ jobs:
           go-version: '1.12'
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v1
+      - uses: actions/checkout@master
       - name: Publish latest tag to registry
         env:
             DOCKER_USER: ${{ secrets.DOCKER_USER }}
