--- a/deploy/kubernetes/hcloud-csi-master.yml
+++ b/deploy/kubernetes/hcloud-csi-master.yml
@@ -155,6 +155,8 @@ spec:
           env:
             - name: CSI_ENDPOINT
               value: unix:///var/lib/csi/sockets/pluginproxy/csi.sock
+            - name: METRICS_ENDPOINT
+              value: 0.0.0.0:9189
             - name: HCLOUD_TOKEN
               valueFrom:
                 secretKeyRef:
@@ -163,6 +165,9 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          ports:
+            - containerPort: 9189
+              name: metrics
           securityContext:
             privileged: true
             capabilities:
@@ -216,6 +221,8 @@ spec:
           env:
             - name: CSI_ENDPOINT
               value: unix:///csi/csi.sock
+            - name: METRICS_ENDPOINT
+              value: 0.0.0.0:9189
             - name: HCLOUD_TOKEN
               valueFrom:
                 secretKeyRef:
@@ -231,6 +238,9 @@ spec:
               mountPath: /dev
           securityContext:
             privileged: true
+          ports:
+            - containerPort: 9189
+              name: metrics
       volumes:
         - name: kubelet-dir
           hostPath:
@@ -248,3 +258,30 @@ spec:
           hostPath:
             path: /dev
             type: Directory
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hcloud-csi-controller-metrics
+  namespace: kube-system
+spec:
+  selector:
+    app: hcloud-csi-controller
+  ports:
+    - port: 9189
+      name: metrics
+      targetPort: metrics
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hcloud-csi-node-metrics
+  namespace: kube-system
+spec:
+  selector:
+    app: hcloud-csi
+  ports:
+    - port: 9189
+      name: metrics
+      targetPort: metrics
