--- a/deploy/kubernetes/hcloud-csi-master.yml
+++ b/deploy/kubernetes/hcloud-csi-master.yml
@@ -6,6 +6,8 @@ metadata:
 spec:
   attachRequired: true
   podInfoOnMount: true
+  volumeLifecycleModes:
+    - Persistent
 ---
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
