Specify ndots dns config for hcloud-csi-driver
It doesn't hurt to be be explicit about it and avoids failure (e.g., with kubespray deployments).

--- a/deploy/kubernetes/hcloud-csi-1.13.yml
+++ b/deploy/kubernetes/hcloud-csi-1.13.yml
@@ -157,6 +157,10 @@ spec:
       volumes:
         - name: socket-dir
           emptyDir: {}
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
 ---
 kind: DaemonSet
 apiVersion: apps/v1
@@ -234,3 +238,7 @@ spec:
           hostPath:
             path: /dev
             type: Directory
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
