--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -192,6 +192,10 @@ spec:
       volumes:
         - name: socket-dir
           emptyDir: {}
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
 ---
 kind: DaemonSet
 apiVersion: apps/v1
@@ -299,6 +303,10 @@ spec:
           hostPath:
             path: /dev
             type: Directory
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
 ---
 apiVersion: v1
 kind: Service
