--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,14 @@
 name: Run tests
-on: [push]
+on: [ push ]
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v1
-      with:
-        go-version: '1.14'
-    - uses: actions/checkout@master
-    - name: Run tests
-      run: |
-        go vet ./...
-        go test ./...
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.15'
+      - uses: actions/checkout@master
+      - name: Run tests
+        run: |
+          go vet ./...
+          go test $(go list ./... | grep -v e2etests) -v
