deploy-k8s: add node anti-affinity to root server nodes
See README for more information.

--- a/deploy/kubernetes/hcloud-csi-master.yml
+++ b/deploy/kubernetes/hcloud-csi-master.yml
@@ -221,6 +221,15 @@ spec:
           operator: Exists
         - key: CriticalAddonsOnly
           operator: Exists
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                - key: "instance.hetzner.cloud/is-root-server"
+                  operator: NotIn
+                  values:
+                    - "true"
       serviceAccount: hcloud-csi
       containers:
         - name: csi-node-driver-registrar
