--- a/.github/workflows/publish_on_tag.yml
+++ b/.github/workflows/publish_on_tag.yml
@@ -12,6 +12,19 @@ jobs:
           fetch-depth: 0
       - id: release_version
         run: echo ::set-output name=value::${GITHUB_REF:11}
+      - name: update pushed tag
+        env:
+          RELEASE_VERSION: ${{ steps.release_version.outputs.value}}
+          OWNER: ${{ github.repository_owner }}
+        run: |
+          sed -i -e "s#: .*/hcloud-csi-driver:latest#: $OWNER/hcloud-csi-driver:$RELEASE_VERSION#" deploy/kubernetes/hcloud-csi.yml
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Update image tags in hcloud-csi.yml to $RELEASE_VERSION"
+          git tag -d v$RELEASE_VERSION
+          git tag v$RELEASE_VERSION
+          git push origin v$RELEASE_VERSION -f
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
