Add k8s 1.22 to tests
This also moves the container runtime in our tests from docker to containerd

Signed-off-by: Lukas Kämmerling <lukas.kaemmerling@hetzner-cloud.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,3 +47,8 @@ k8s 1.21:
   <<: *k8se2e
   variables:
     K8S_VERSION: k8s-1.21.0
+
+k8s 1.22:
+  <<: *k8se2e
+  variables:
+    K8S_VERSION: k8s-1.22.0
