Use Skaffold + hack/ scripts for dev/test loops
hack/dev-up.sh uses the hcloud CLI and alexellis/k3sup to quickly bring
up an n node cluster in Hetzner Cloud for testing purposes.

hack/dev-down.sh cleans up resources created by hack/dev-up.sh

hack/run-e2e-tests.sh runs the CSI e2e test suite against the active
cluster.

Skaffold handles building, tagging and deploying the manifests for both
local dev, and CI test automation. In local development, it also does
live reload, rebuilding+repushing images, and redeploying containers.

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,11 +4,14 @@ Dockerfile
 .github/
 .gitlab-ci.yml
 .idea/
+.vscode/
 CHANGES.md
 LICENSE
 README.md
 e2etests/
 deploy/
+hack/
 mock/
 script/
 **/*_test.go
+skaffold.yaml
