--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -154,6 +154,8 @@ spec:
               value: unix:///run/csi/socket
             - name: METRICS_ENDPOINT
               value: 0.0.0.0:9189
+            - name: ENABLE_METRICS
+              value: "true"
             - name: KUBE_NODE_NAME
               valueFrom:
                 fieldRef:
@@ -246,6 +248,8 @@ spec:
               value: unix:///run/csi/socket
             - name: METRICS_ENDPOINT
               value: 0.0.0.0:9189
+            - name: ENABLE_METRICS
+              value:  "true"
             - name: HCLOUD_TOKEN
               valueFrom:
                 secretKeyRef:
