test_e2e: oops quotes

--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -66,13 +66,13 @@ jobs:
         echo "$HOME/bin" >> $GITHUB_PATH
     - name: Log in to the Container registry
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      if: ${{ github.repository_owner != "hetznercloud" }}
+      if: ${{ github.repository_owner != 'hetznercloud' }}
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - uses: 3bit/setup-hcloud@v1
-    - if: ${{ github.repository_owner != "hetznercloud" }}
+    - if: ${{ github.repository_owner != 'hetznercloud' }}
       env:
         REPO_OWNER: ${{ github.repository_owner }}
       run: |
