Fix changelog generation
Signed-off-by: Lukas Kämmerling <lukas.kaemmerling@hetzner-cloud.de>

--- a/.github/workflows/publish_on_tag.yml
+++ b/.github/workflows/publish_on_tag.yml
@@ -7,7 +7,9 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - id: release_version
         run: echo ::set-output name=value::${GITHUB_REF:11}
       - name: Set up Docker Buildx
