--- a/.github/workflows/goimports.yml
+++ b/.github/workflows/goimports.yml
@@ -7,7 +7,9 @@ jobs:
     - uses: actions/setup-go@v2
       with:
         go-version: '1.17'
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Check imports
       shell: bash
       run: |
