--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -11,7 +11,9 @@ jobs:
     - uses: actions/setup-go@v2
       with:
         go-version: '1.17'
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Check whether HCLOUD_TOKEN needs to be fetched from TTS
       id: check_tts
       env:
