e2e: run test suite on PRs

--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -1,5 +1,9 @@
 name: Run e2e tests
-on: [push]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 jobs:
   test:
     runs-on: ubuntu-latest
