--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -4,6 +4,7 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+concurrency: ci-${{ github.ref }}
 jobs:
   test:
     runs-on: ubuntu-latest
