Revert "e2e: run test suite on PRs"
This reverts commit f2e2d486b0048522bc543ded5944dbd72b06f616.

--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -1,9 +1,5 @@
 name: Run e2e tests
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: [push]
 concurrency: ci-${{ github.ref }}
 jobs:
   test:
