Add --csi-address to liveness-probe
Closes https://github.com/hetznercloud/csi-driver/issues/232

--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -295,6 +295,8 @@ spec:
         - name: liveness-probe
           imagePullPolicy: Always
           image: k8s.gcr.io/sig-storage/livenessprobe:v2.3.0
+          args:
+            - --csi-address=/run/csi/socket
           volumeMounts:
             - mountPath: /run/csi
               name: plugin-dir
